--- a/sway/config
+++ b/sway/config
@@ -1,111 +1,128 @@
-#--[Sway config file]-- #
-#-----------backgroung img----\
-output * bg ~/Pictures/wallpapers/* fill
-exec xrdb $HOME/.Xresources
-#::::mod touch:::::::
-set $mod Mod4
-
-
-#::::default Programs::::::::
-set $browser google-chrome-unstable
-set $term urxvt
-
-
-
-# font
-font pango:Monaco, 9
-
-
-#::Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-#:::start a terminal
-bindsym $mod+Return exec urxvt  # Urxvt
-bindsym $mod+x exec xterm -e /bin/bash  # xterm
-
-# :::kill focused window
-bindsym $mod+q kill
-
-
-#::: start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -fn 'monaco-9:bold:pixelsize=12' -nb '#3F3F3F' -nf '#15B3E8' -sf '#000000' -sb '#F2FA00'
-
-#:::: change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
-# :::alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-
-bindsym $mod+Alt+Left workspace prev
-bindsym $mod+Alt+Right workspace next
-
-
-# alternatively, you can use the cursor keys:
-#bindsym $mod+Shift+Left move left 50px
-#bindsym $mod+Shift+Down move down 50px
-#bindsym $mod+Shift+Up move up 50px
-#bindsym $mod+Shift+Right move right 50px
+# Default config for sway
 #
-# split in horizontal orientation
-bindsym $mod+h split h
+# Copy this to ~/.config/sway/config and edit it to your liking.
+#
+# Read `man 5 sway` for a complete reference.
+### Variables
+exec xrdb $HOME/.Xresources
 
-# split in vertical orientation
-bindsym $mod+v split v
+#
+# Logo key. Use Mod1 for Alt.
+set $mod Mod4
+# Home row direction keys, like vim
+set $left h
+set $down j
+set $up k
+set $right l
 
-#::::::::: enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+#font config
+#
+font pango:Monaco,9
+# Your preferred terminal emulator
+set $term urxvt
+# Your preferred application launcher
+set $menu dmenu_run
+### Output configuration
+#
+# Default wallpaper (more resolutions are available in /usr/share/sway/)
+output * bg /home/windy/Pictures/wallpapers/moonRising.png fill
+#
+# Example configuration:
+#
+#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+#
+# You can get the names of your outputs by running: swaymsg -t get_outputs
 
-#:::::::pop-ups for fullscreen
-#popup_during_fullscreen smart
+### Input configuration
+#
+# Example configuration:
+#
+##"2:14:SynPS/2_Synaptics_TouchPad" {
+
+#       natural_scroll enabled
+#       middle_emulation enabled
+input "2:8:AlpsPS/2_ALPS_GlidePoint" {  
+	   accel_profile adaptive
+       dwt enabled
+       tap enabled
+       scroll_method  edge
+   }
+#
+# You can get the names of your inputs by running: swaymsg -t get_inputs
+# Read `man 5 sway-input` for more information about this section.
+
+ #:::::::::disable_window_borders::::::::                                                                  
+ for_window [class="^.*"] border pixel 0                                                                   
+ new_window pixel 1                                                                                        
+ new_float  normal   
 
 
-# change container layout (stacked, tabbed, toggle split)
-#bindsym $mod+s layout stacking
-#bindsym $mod+w layout tabbed
-#bindsym $mod+e layout toggle split
+#:::::i3_ gaps::::::::::::::                                                                              
+set $default_gaps_inner 10                                                                                
+set $default_gaps_outer 5                                                                                 
+gaps inner $default_gaps_inner                                                                            
+gaps outer $default_gaps_outer                                                                            
+smart_gaps on                                                                                             
 
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+
+### Key bindings
+#
+# Basics:
+#
+    # start a terminal
+    bindsym $mod+Return exec $term
+
+    # kill focused window
+    bindsym $mod+q kill
+
+    # start your launcher
+bindsym $mod+d exec dmenu_run -i -fn 'monaco-9:bold:pixelsize=12' -nb '#3F3F3F' -nf '#15B3E8' -sf '#000000' -sb '#F2FA00' 
+    # Drag floating windows by holding down $mod and left mouse button.
+    # Resize them with right mouse button + $mod.
+    # Despite the name, also works for non-floating windows.
+    # Change normal to inverse to use left mouse button for resizing and right
+    # mouse button for dragging.
+    floating_modifier $mod normal
+
+    # reload the configuration file
+    bindsym $mod+Shift+r reload
+
+    # exit sway (logs you out of your wayland session)
+    bindsym $mod+Shift+e exit
+#
+# Moving around:
+#
+    # Move your focus around
+    bindsym $mod+$left focus left
+    bindsym $mod+$down focus down
+    bindsym $mod+$up focus up
+    bindsym $mod+$right focus right
+    # or use $mod+[up|down|left|right]
+    bindsym $mod+Left focus left
+    bindsym $mod+Down focus down
+    bindsym $mod+Up focus up
+    bindsym $mod+Right focus right
+
+    # _move_ the focused window with the same, but add Shift
+    bindsym $mod+Shift+$left move left
+    bindsym $mod+Shift+$down move down
+    bindsym $mod+Shift+$up move up
+    bindsym $mod+Shift+$right move right
+    # ditto, with arrow keys
+    bindsym $mod+Shift+Left move left
+    bindsym $mod+Shift+Down move down
+    bindsym $mod+Shift+Up move up
+    bindsym $mod+Shift+Right move right
+#
 
 # enable floating mode for all Specified windows
-for_window [class="(?i)urxvt"] floating enable
+#for_window [class="(?i)urxvt"] floating enable
 for_window [class="(?i)mpv"] floating enable
-for_window [class="(?i)xterm"] floating enable
-
-
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
 
 #quick_back_and_forth_work_space
 workspace_auto_back_and_forth yes
 bindsym $mod+z workspace back_and_forth
 
-#brightness control
-bindsym XF86MonBrightnessUp exec --no-startup-id sudo bright_Up
-bindsym XF86MonBrightnessDown exec --no-startup-id sudo bright_Down
-
-
-# bindsym XF86Display exec --no-startup-id xset dpms force off
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
 
 ######grouping workspaces+name####
 set $ws1 "1:"
@@ -128,117 +145,107 @@ assign [class="(?i)Tor Browser"] → $ws9
 #assign [class="(?!urxvt)"] → $ws1
 assign [class="^Tor Browser$" instance="^Navigator$"] → 3
 
-# switch to workspace
-bindsym $mod+1 workspace  $ws1
-bindsym $mod+2 workspace  $ws2
-bindsym $mod+3 workspace  $ws3
-bindsym $mod+4 workspace  $ws4
-bindsym $mod+5 workspace  $ws5
-bindsym $mod+6 workspace  $ws6
-bindsym $mod+7 workspace  $ws7
-bindsym $mod+8 workspace  $ws8
-bindsym $mod+9 workspace  $ws9
-bindsym $mod+0 workspace  $ws10
+#
+    # switch to workspace
+    bindsym $mod+1 workspace $ws1
+    bindsym $mod+2 workspace $ws2
+    bindsym $mod+3 workspace $ws3
+    bindsym $mod+4 workspace $ws4
+    bindsym $mod+5 workspace $ws5
+    bindsym $mod+6 workspace $ws6
+    bindsym $mod+7 workspace $ws7
+    bindsym $mod+8 workspace $ws8
+    bindsym $mod+9 workspace $ws9
+    bindsym $mod+0 workspace $ws10
+    # move focused container to workspace
+    bindsym $mod+Shift+1 move container to workspace $ws1
+    bindsym $mod+Shift+2 move container to workspace $ws2
+    bindsym $mod+Shift+3 move container to workspace $ws3
+    bindsym $mod+Shift+4 move container to workspace $ws4
+    bindsym $mod+Shift+5 move container to workspace $ws5
+    bindsym $mod+Shift+6 move container to workspace $ws6
+    bindsym $mod+Shift+7 move container to workspace $ws7
+    bindsym $mod+Shift+8 move container to workspace $ws8
+    bindsym $mod+Shift+9 move container to workspace $ws9
+    bindsym $mod+Shift+0 move container to workspace $ws10
+    # Note: workspaces can have any name you want, not just numbers.
+    # We just use 1-10 as the default.
+#
+# Layout stuff:
+#
+    # You can "split" the current object of your focus with
+    # $mod+b or $mod+v, for horizontal and vertical splits
+    # respectively.
+    bindsym $mod+b splith
+    bindsym $mod+v splitv
 
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+    # Switch the current container between different layout styles
+    bindsym $mod+s layout stacking
+    bindsym $mod+w layout tabbed
+    bindsym $mod+e layout toggle split
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
+    # Make the current focus fullscreen
+    bindsym $mod+f fullscreen
 
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+    # Toggle the current focus between tiling and floating mode
+    bindsym $mod+Shift+space floating toggle
 
-# exit i3 (logs you out of your X session)
-#bindsym $mod+Shift+e exec "i3-nagbar -f 'pango:monaco 8' -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-    bindsym $mod+Shift+e exit
+    # Swap focus between the tiling area and the floating area
+    bindsym $mod+space focus mode_toggle
 
-# resize window (you can also use the mouse for that)
+    # move focus to the parent container
+    bindsym $mod+a focus parent
+#
+# Scratchpad:
+#
+    # Sway has a "scratchpad", which is a bag of holding for windows.
+    # You can send windows there and get them back later.
+
+    # Move the currently focused window to the scratchpad
+    bindsym $mod+Shift+minus move scratchpad
+
+    # Show the next scratchpad window or hide the focused scratchpad window.
+    # If there are multiple scratchpad windows, this command cycles through them.
+    bindsym $mod+minus scratchpad show
+#
+# Resizing containers:
+#
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+    # left will shrink the containers width
+    # right will grow the containers width
+    # up will shrink the containers height
+    # down will grow the containers height
+    bindsym $left resize shrink width 10 px or 10 ppt
+    bindsym $down resize grow height 10 px or 10 ppt
+    bindsym $up resize shrink height 10 px or 10 ppt
+    bindsym $right resize grow width 10 px or 10 ppt
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+    # ditto, with arrow keys
+    bindsym Left resize shrink width 10 px or 10 ppt
+    bindsym Down resize grow height 10 px or 10 ppt
+    bindsym Up resize shrink height 10 px or 10 ppt
+    bindsym Right resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+    # return to default mode
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
 }
-
 bindsym $mod+r mode "resize"
 
-#moving floating windows...
-mode "moveit" {
-#using h,j,k,l=====
-    bindsym k move up 30px
-    bindsym h move left 30px
-    bindsym j move down 30px
-    bindsym l move right 30px
-
-#using arrow keys====
-    bindsym Up move up 30px
-    bindsym Left move left 30px
-    bindsym Down move down 30px
-    bindsym Right move right 30px
-    
-    bindsym Mod4+c mode "default"
-    bindsym Escape mode "default"
-    bindsym Return mode "default"
-
-}
-bindsym Mod4+c focus floating; mode "moveit"
-
-
-#:::::::::disable_window_borders::::::::
-for_window [class="^.*"] border pixel 0
-new_window pixel 1
-new_float  normal
-#pixel 1
-
-#:::::i3_ gaps::::::::::::::
-set $default_gaps_inner 10
-set $default_gaps_outer 5
-gaps inner $default_gaps_inner
-gaps outer $default_gaps_outer
-#smart_gaps on
-#smart_borders on
-
-
 #:::::::::control de volume:::::::::::::
-bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 2+ unmute"
-bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 2- unmute"
-bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
 
+bindsym XF86AudioMute exec --no-startup-id  amixer set Master toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 5%+
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 5%-
 
+#brightness control
+bindsym XF86MonBrightnessUp exec --no-startup-id sudo bright_Up
+bindsym XF86MonBrightnessDown exec --no-startup-id sudo bright_Down
 
-
-
-#bar {
-#	status_command i3status
-#	position top
-#}
-
+#
+# Status Bar:
+#
+# Read `man 5 sway-bar` for more information about this section.
 
 bar {
 	status_command  i3status 
@@ -271,6 +278,5 @@ client.unfocused 		#455a64 #455a64 #a1a1a1  #bfbfbf   #455a64
 client.urgent   		#4a4b4c #4a4b4c #fdfdfd  #fbfbfb   #4a4c4b
 client.placeholder     		#000000 #0c0c0c #ffffff  #000000   #0c0c0c
 client.background       	#111111
-
 
 
