--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -101,16 +101,12 @@ mime ^video, terminal, !X, has mpv       = mpv -- "$@"
 # Documents
 #-------------------------------------------
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
-ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
-
-
 ext djvu, has mupdf,X, flag f = mupdf -- "$@"
-ext djvu, has mupdf-x11, X, flag f = mupdf-x11 -- "$@"
 
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
-mime ^image, has feh,       X, flag f = feh -- "$@"
+mime ^image, has feh,       X, flag f = feh --scale-down --auto-zoom $argv -- "$@"
 
 #-------------------------------------------
 # Archives
