--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -92,6 +92,7 @@ mime ^audio|ogg$, terminal, has mpv      = mpv -- "$@"
 mime ^video,       has mpv,      X, flag f = mpv -- "$@"
 mime ^video,       has mpv,      X, flag f = mpv --fs -- "$@"
 
+ext 3gp, has mpv,    X, flag f = mpv -- "$@"
 #--------------------------------------------
 # Video without X:
 #-------------------------------------------
@@ -106,7 +107,7 @@ ext djvu, has mupdf,X, flag f = mupdf -- "$@"
 #-------------------------------------------
 # Image Viewing:
 #-------------------------------------------
-mime ^image, has feh,       X, flag f = feh --scale-down --auto-zoom $argv -- "$@"
+mime ^image, has feh,       X, flag f = feh --scale-down -xZdY  $argv -- "$@"
 
 #-------------------------------------------
 # Archives
