--- a/i3/config
+++ b/i3/config
@@ -1,51 +1,38 @@
 #--[i3 config file]-- #
 #-----------backgroung img----(+)----wifi-starting---------
-exec_always --no-startup-id  feh -g 1366x768  --recursive --randomize --bg-fill  /home/windy/Pictures/wallpapers/
+exec_always --no-startup-id  feh -g 1366x768  --recursive --randomize --bg-fill  /home/windy/Pictures/
 #::::mod touch:::::::
 set $mod Mod4
-
-
 #::::default Programs::::::::
 set $browser chromium
 set $terminal urxvt
-
-
 # font
 font pango:Monaco, 9
-
-
 #::Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
+focus_follows_mouse no
 
 #:::start a terminal
 bindsym $mod+Return exec urxvt  # Urxvt
-bindsym $mod+x exec xterm -e /bin/bash  # xterm
-
 # :::kill focused window
 bindsym $mod+q kill
-
-
 #::: start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -i -fn 'monaco-9:bold:pixelsize=12' -nb '#3F3F3F' -nf '#15B3E8' -sf '#000000' -sb '#F2FA00'
-
 #:::: change focus
 bindsym $mod+j focus left
 bindsym $mod+k focus down
 bindsym $mod+l focus up
 bindsym $mod+semicolon focus right
-
 # :::alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
 # move focused window
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
 
 bindsym $mod+Alt+Left workspace prev
 bindsym $mod+Alt+Right workspace next
@@ -88,8 +75,8 @@ workspace_auto_back_and_forth yes
 bindsym $mod+z workspace back_and_forth
 
 #brightness control
-bindsym XF86MonBrightnessUp exec --no-startup-id sudo bright_Up
-bindsym XF86MonBrightnessDown exec --no-startup-id sudo bright_Down
+bindsym XF86MonBrightnessUp exec --no-startup-id sudo bright_Up.sh
+bindsym XF86MonBrightnessDown exec --no-startup-id sudo bright_Down.sh
 
 
 bindsym XF86Display exec --no-startup-id xset dpms force off
@@ -114,8 +101,8 @@ assign [class="(?i)chromium"] → $ws2
 assign [class="(?i)mpv"] → $ws3
 assign [class="(?i)mupdf"] → $ws4
 assign [class="(?i)wireshark-gtk"] → $ws8
-assign [class="(?i)Tor Browser"] → $ws9
-assign [class="^Tor Browser$" instance="^Navigator$"] → 3
+assign [class="^Firefox$" instance="^Navigator$"] → $ws9
+assign [class="^Tor Browser$" instance="^Navigator$"] → $ws9
 
 # switch to workspace
 bindsym $mod+1 workspace  $ws1
@@ -211,23 +198,23 @@ smart_borders on
 bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 2+ unmute"
 bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 2- unmute"
 bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
-
+#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 bar {
 	status_command  i3status
-    position top
-	font  Monaco,Bold 11px
+   position top
+   font pango:  Monaco,Bold 11px
 	separator_symbol "   "
 	mode dock
-   
+  
     colors {
         statusline   #78da59
         background #585858
 		separator #fff32e
-							#border 	#bg		#txt
+						#border 	#bg		#txt
         focused_workspace	#585858	#585858	#66FF66
         inactive_workspace	#585858	#585858	 #78da59
 		active_workspace	#777F8B	#777F8B	#ecedee
-    	 urgent_workspace	#DEDFE3	#DEDFE3	#767E8A   
+   	 urgent_workspace	#DEDFE3	#DEDFE3	#767E8A   
 }
 }
