--- a/i3status/config
+++ b/i3status/config
@@ -9,10 +9,19 @@
 
 general {
         colors = true
-		color_good = "#00e6ac"
+		color_good = "#00e6ac" #"#33cc3"    #"#F08D0C"
 		interval = 5
 		markup="pango"
 }
+
+#pink   		  #ff80bf		#fa4c7e
+#yellow  		  #ffff66		#fdd243
+#green   		  #aaff80		#78da59
+#Dark blue 		  #1a8cff		#166cd6
+#light blue 	  #99ccff		#33bdf5
+#Grey Shadow      #b3b3b3		#8d8e90
+#Orange 		  #ffa64d 		#fba137
+
 
 
 order += "wireless _first_"
@@ -22,9 +31,9 @@ order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-#		format_up = " [%essid ]"       
-	#	format_down = " [down]" p#73ABFF
-	 format_up = "<span color='#33bdf5'>[  ]: On: %essid </span> "   //(%quality at %essid) %ip"
+	#	format_up = " [%essid ]"       
+	#	format_down = " [down]"
+	 format_up = "<span color='#73ABFF'>[  ]: On: %essid </span> "   //(%quality at %essid) %ip"
 	 format_down = "" #"[  ]  Wifi: down"
 }
 
@@ -52,7 +61,7 @@ battery 0 {
 
 tztime local {
 	    format = "<span color='#ffc125'>%time</span>"
-        format_time = "   %I:%M %p |   %a [%d]-%b [%m]"
+        format_time = "  %I:%M %p |  %a [%d]-%b [%m]"
 }
 
 
